@@ -107,6 +107,9 @@ ENTRY_FORMAT="raw"
 # e.g. plugins/page/format/markdown.sh = markdown
 ARTICLE_FORMAT="raw"
 
+# Maximum links to yearly archives (defaults to 12)
+#MAX_YEARLINKS="12"
+
 # Maximum links to monthly archives (defaults to 12)
 #MAX_MONTHLINKS="12"
 
