@@ -62,7 +62,8 @@ $NB_RSSAltLink
 	</div>
 	<div class="side">
 		<a href="${BASE_URL}$ARCHIVES_DIR/$NB_INDEX">Archive Index</a><br />
-		$NB_MonthLinks
+		$NB_YearLinks
+		<!-- $NB_MonthLinks -->
 	</div>
 	<div class="syndicate">
 		Syndicate this site: <a href="${BASE_URL}rss.$NB_SYND_FILETYPE">RSS</a>,
