@@ -2,7 +2,7 @@
 ############################################################
 #  NanoBlogger 3.3 Copyright 2005 n1xt3r (Kevin R. Wood)   #
 ############################################################
-# Last modified: 2005-11-24T00:26:15-05:00
+# Last modified: 2005-11-25T01:17:18-05:00
 
 # nanoblogger's version.
 VERSION="3.3 CVS-RC3"
@@ -117,12 +117,10 @@ fi
 # create individual page for an entry
 build_permalink(){
 if [ "$ENTRY_ARCHIVES" = 1 ]; then
-	if [ "$NB_DATA_DIR/$entry" -nt "$BLOG_DIR/$ARCHIVES_DIR/$permalink_file" ]; then
-		mkdir -p `dirname "$BLOG_DIR/$PARTS_DIR/$permalink_file"`
-		echo "$TEMPLATE_DATA" > "$BLOG_DIR/$PARTS_DIR/$permalink_file"
-		make_page "$BLOG_DIR/$PARTS_DIR/$permalink_file" "$NB_TEMPLATE_DIR/$PERMALINK_TEMPLATE" \
-		"$BLOG_DIR/$ARCHIVES_DIR/$permalink_file"
-	fi
+	mkdir -p `dirname "$BLOG_DIR/$PARTS_DIR/$permalink_file"`
+	echo "$TEMPLATE_DATA" > "$BLOG_DIR/$PARTS_DIR/$permalink_file"
+	make_page "$BLOG_DIR/$PARTS_DIR/$permalink_file" "$NB_TEMPLATE_DIR/$PERMALINK_TEMPLATE" \
+	"$BLOG_DIR/$ARCHIVES_DIR/$permalink_file"
 fi
 }
 
@@ -132,10 +130,10 @@ ENTRYARCHIVES_LIST="$1"
 ENTRYARCHIVES_TEMPLATE="$2"
 for entry in $ENTRYARCHIVES_LIST; do
 	if [ -f "$NB_DATA_DIR/$entry" ]; then
-		touch "$NB_DATA_DIR/$entry"
 		[ -z "$PARTS_FILE" ] &&
 			PARTS_FILE="$BLOG_DIR/$PARTS_DIR/$permalink_file"
 		if [ "$ENTRYARCHIVES_TEMPLATE" = "$PERMALINKENTRY_TEMPLATE" ]; then
+			ENTRY_CACHETYPE=entryarch_metadata
 			set_baseurl "" "$BLOG_DIR/$ARCHIVES_DIR/$permalink_file"
 			read_entry "$NB_DATA_DIR/$entry"
 			set_entrylink "$entry"
@@ -279,6 +277,7 @@ query_db "$yearn"
 
 # create archive of given month
 build_montharchive(){
+ENTRY_CACHETYPE=month_metadata
 query_db "$month"
 if [ ! -z "$DB_RESULTS" ]; then
 	set_monthlink "$month"
@@ -294,6 +293,7 @@ fi
 
 # build category archives
 build_catarchives(){
+ENTRY_CACHETYPE=cat_metadata
 db_categories="$CAT_LIST"
 if [ ! -z "$db_categories" ]; then
 	for cat_arch in $db_categories; do
@@ -312,18 +312,18 @@ update_cache(){
 cache_update="$1"
 cache_def="$2"
 CACHEUPDATE_LIST="$3"
-> "$SCRATCH_FILE-$cache_def".cache_list
 if [ "$cache_update" = build ]; then
 	for cache_item in $CACHEUPDATE_LIST; do
-		echo "$cache_item" >> "$SCRATCH_FILE-$cache_def".cache_list
+		echo "$cache_item" >> "$SCRATCH_FILE.$cache_def-cache_list"
 	done
-	CACHEUPDATE_LIST=$(< "$SCRATCH_FILE-$cache_def.cache_list")
+	CACHEUPDATE_LIST=$(< "$SCRATCH_FILE.$cache_def-cache_list")
 elif [ "$cache_update" = rebuild ]; then
+	> "$SCRATCH_FILE.$cache_def-cache_list"
 	for cache_item in $CACHEUPDATE_LIST; do
-		echo "$cache_item" >> "$SCRATCH_FILE-$cache_def".cache_list
+		echo "$cache_item" >> "$SCRATCH_FILE.$cache_def-cache_list"
 		rm -f "$BLOG_DIR/$CACHE_DIR/$cache_item.$cache_def"
 	done
-	CACHEUPDATE_LIST=$(< "$SCRATCH_FILE-$cache_def.cache_list")
+	CACHEUPDATE_LIST=$(< "$SCRATCH_FILE.$cache_def-cache_list")
 else
 	[ ! -z "$cache_update" ] && query_db "$cache_update" "$db_catquery"
 	for cache_item in $DB_RESULTS; do	
@@ -430,17 +430,22 @@ else
 fi
 # query database and check for categories
 db_catquery=`cat_id`; check_catid
+# rebuild entire entries cache
+#update_cache all entry_metadata
+# rebuild entire plugins cache
+#update_cache all plugin_metadata
 [ -z "$CAT_LIST" ] &&
 	find_categories "$UPDATE_LIST"
-update_cache all entry_metadata
+# setup cache for plugins
+ENTRY_CACHETYPE=plugin_metadata
 load_plugins
-# update previously cached entries
-update_cache rebuild entry_metadata "$CACHE_LIST"
 # build the archives
 nb_msg "$buildweblog_files"
 [ "$USR_QUERY" != main ] && build_archives
+# rebuild cache data for main index build
+#update_cache "$QUERY_MODE" entry_metadata
+ENTRY_CACHETYPE=main_metadata
 # build main index
-update_cache "$QUERY_MODE" entry_metadata
 nb_msg "$buildweblog_main"
 paginate "$QUERY_MODE" nocat "$MAX_ENTRIES" "$MAIN_TEMPLATE" "$BLOG_DIR/" "$NB_INDEXFILE"
 }
@@ -528,8 +533,11 @@ for entry_id in $NUMVAR; do
 	fi
 	[ -f "$NB_DATA_DIR/$New_EntryDateFile" ] &&
 		Edit_EntryFile="$New_EntryDateFile"
-	[ -N "$NB_DATA_DIR/$Edit_EntryFile" ] &&
+	if [ -N "$NB_DATA_DIR/$Edit_EntryFile" ]; then
 		echo "$Edit_EntryFile" >> "$SCRATCH_FILE"
+		# throw out old cache data
+		rm -f "$BLOG_DIR/$CACHE_DIR/$Edit_EntryFile".*
+	fi
 done
 UPDATE_LIST=$(< "$SCRATCH_FILE")
 if [ ! -z "$UPDATE_LIST" ]; then
@@ -607,7 +615,7 @@ for entry_id in $NUMVAR; do
 			# delete permalink directory
 			[ ! -z "$entry_dir" ] && [ -d "$Delete_PermalinkDir" ] &&
 				rm -fr "$Delete_PermalinkDir"
-			# delete entry's cache file
+			# throw out old cache data
 			rm -f "$BLOG_DIR/$CACHE_DIR/$Delete_EntryFile".*
 		fi
 		# update previous and next entries of deleted entry
